<resources>
    <string name="app_name">메디앤아이</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pharmacy">PharmacyActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>


    <!--TTS String -->
    <string name="tts_medicine">약 정보 검색</string>
    <string name="tts_pharmacy">주변 약국 검색</string>
    <string name="tts_alarm">약 알람</string>
    <string name="tts_nfc">NFC</string>
    <string name="tts_setting">설정</string>

    <!-- MediInfo String-->
    <string name="medi_voice">음성 검색</string>
    <string name="medi_voice_ex">검색할 의약품을\n말해주세요</string>
    <string name="medi_barcode">바코드 검색</string>
    <string name="medi_barcode_ex">검색할 의약품을\n인식해주세요</string>


    <!--Alarm String -->
    <string name="alarm_am">오전</string>
    <string name="alarm_pm">오후</string>

    <string name="alarm_time_1">시간 선택</string>
    <string name="alarm_time_2">반복 선택</string>
    <string name="alarm_time_3">음성 메모</string>
    <string name="alarm_time_4">등록하시겠습니까?</string>

    <string name="alarm_main_none">알람을\n등록해주세요</string>

    <string name="setting_tutorial">튜토리얼 다시보기</string>
    <string name="setting_phone">보호자 번호 설정</string>
    <string name="setting_info">버전 및 개발자 정보</string>

    <string name="setting_num1">01</string>
    <string name="setting_num2">02</string>
    <string name="setting_num3">03</string>

    <!-- -->
    <string name="setting_mail">probono.medineye@gmail.com</string>
</resources>
