<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="29dp"
    tools:context="kr.co.dongduk.medineye.activity.SettingActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="@drawable/background_main">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/tutorial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/textColor_y"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_num1"/>

        <TextView
            android:layout_marginTop="20dp"
             android:textColor="@color/textColor_w"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_tutorial"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor_w"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/phone_num"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/textColor_y"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_num2"/>
        <TextView
            android:layout_marginTop="20dp"
             android:textColor="@color/textColor_w"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_phone"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor_w"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/app_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/textColor_y"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_num3"/>
        <TextView
            android:layout_marginTop="20dp"
             android:textColor="@color/textColor_w"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_info"/>
    </LinearLayout>
</LinearLayout>
</RelativeLayout>